# MineOpsWeb

./: .env.example  .gitignore  AGENTS.md  Makefile  PRD.md  README.md  docker-compose.dev.yml  docker-compose.yml  mineops-web.code-workspace  package-lock.json  package.json  reasonix.toml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
PRD/: DeepSeek_MineOps_Agent_Powerhouse_SETUP_PRD.md  MineOpsWeb_Codex_PRD.md  MineOpsWeb_Codex_PRD_REVISED.md  MineOpsWeb_Codex_PRD_V3.md  MineOpsWeb_Dashboard_UX_Refactor_Instructions.md
backend/: Dockerfile  mineops.db  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  serialization.py
backend/app/db/: schema.py  session.py
backend/app/models/: core.py
backend/app/schemas/: api.py
backend/tests/: test_api.py
catalogs/: README.md
docs/: APK_EXTRACTION_REPORT.md  ARCHITECTURE.md  CALCULATION_INVENTORY.md  DATA_MIGRATION_MAP.md  DEPLOYMENT.md  MIGRATION_INVENTORY.md  MINEOPS_DATA_ENGINE_DECISION_LOG.md  MINEOPS_DATA_ENGINE_IMPLEMENTATION_PLAN.md  OPERATIONS.md  ORACLE-VM-DEPLOY-SETUP.md  ORACLE-VM-GUIDE.md  ORACLE_VM_SETUP_REFERENCE.md  PARITY_MATRIX.md  SECURITY.md  TEST_PLAN.md  THIRD_PARTY_REVIEW_REPORT.md  UBUNTUMAC_CAPTURE_SETUP.md  UI_IMPROVEMENTS_LOG.md  USER_GUIDE.md  V3_CURRENT_STATE_RECONCILIATION.md  pocketbaseReadme.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ingestion-agent/: pyproject.toml
ops/: debug_loca.py  (+17 more)
(+252 files in other folders)
