[project]
name = "mineops-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4", "pydantic-settings>=2.5,<3", "argon2-cffi>=23,<24",
  "python-multipart>=0.0.12,<1"
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1", "ruff>=0.6,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
